--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "react-bootstrap": "^2.7.4",
     "react-csv": "2.2.2",
     "react-dom": "^18.2.0",
+    "react-grid-carousel": "^1.0.1",
+    "react-multi-carousel": "^2.8.3",
     "react-paginate": "8.1.2",
+    "react-router": "^6.11.2",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.62.1",
