--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
     "react-grid-carousel": "^1.0.1",
     "react-multi-carousel": "^2.8.3",
     "react-paginate": "8.1.2",
+    "react-redux": "8.0.5",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "redux": "4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.62.1",
     "styled-components": "^6.0.0-rc.1",
     "web-vitals": "^2.1.4"
